# hydra-torchrun-launcher

./: README.md  pyproject.toml
hydra_plugins/hydra_torchrun_launcher/: _core.py  config.py  slurm_config.py  slurm_launcher.py  slurm_utils.py
test/: test_slurm.py
