[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-torchrun-launcher"
version = "0.1.2"
description = "Hydra torchrun launcher"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["hydra-core", "cloudpickle"]

[project.optional-dependencies]
slurm = ["submitit>=1.5.0"]
